# oop_benches

./: README.md
cpp_Mouratori/: .gitignore  CMakeLists.txt  main.cpp  mainCorner.cpp  shapes.cpp  shapes.h
dotnet/: .gitignore  Program.cs  Shapes.cs  bench-dotnet-sample.csproj
